force-app/main/default/objects/EYI_Payment_Line_Item__c/EYI_Payment_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Object to store line item information for payment receipts</description>
    <label>Payment Line Item</label>
    <nameField>
        <displayFormat>PLI-{0000}</displayFormat>
        <label>Payment Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>