force-app/main/default/objects/EYI_Payment_Line_Item__c/fields/EYI_Adjustment_Amount__c.field-meta.xml
<CustomField>
    <fullName>EYI_Adjustment_Amount__c</fullName>
    <description>Amount entered by agents while punching the receipt</description>
    <label>Adjustment Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>