force-app/main/default/objects/EYI_Payment_Line_Item__c/fields/EYI_Adjustment_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_Adjustment_Type__c</fullName>
    <label>Adjustment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>GST</fullName>
            </value>
            <value>
                <fullName>OTH</fullName>
            </value>
            <value>
                <fullName>ADV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>