force-app/main/default/objects/EYI_Payment_Line_Item__c/fields/EYI_Assignment_No__c.field-meta.xml
<CustomField>
    <fullName>EYI_Assignment_No__c</fullName>
    <label>Assignment No.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>