force-app/main/default/objects/EYI_Payment_Line_Item__c/fields/EYI_Billing_Document__c.field-meta.xml
<CustomField>
    <fullName>EYI_Billing_Document__c</fullName>
    <label>Billing Document</label>
    <length>255</length>
    <type>Text</type>
</CustomField>