force-app/main/default/objects/EYI_Payment_Line_Item__c/fields/EYI_Currency_Key__c.field-meta.xml
<CustomField>
    <fullName>EYI_Currency_Key__c</fullName>
    <label>Currency Key</label>
    <length>3</length>
    <type>Text</type>
</CustomField>