force-app/main/default/objects/EYI_Payment_Line_Item__c/fields/EYI_Customer_Reference__c.field-meta.xml
<CustomField>
    <fullName>EYI_Customer_Reference__c</fullName>
    <label>Customer Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>