force-app/main/default/objects/EYI_Payment_Line_Item__c/fields/EYI_Doc_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_Doc_Type__c</fullName>
    <label>Doc. Type</label>
    <length>2</length>
    <type>Text</type>
</CustomField>