force-app/main/default/objects/EYI_Payment_Line_Item__c/fields/EYI_FL_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_FL_Document_Number__c</fullName>
    <description>Field created for demand receipt syncing</description>
    <label>FL Document Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>