force-app/main/default/objects/EYI_Payment_Line_Item__c/fields/EYI_INV_REF__c.field-meta.xml
<CustomField>
    <fullName>EYI_INV_REF__c</fullName>
    <label>INV REF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>