force-app/main/default/objects/EYI_Payment_Line_Item__c/fields/EYI_Item_Text__c.field-meta.xml
<CustomField>
    <fullName>EYI_Item_Text__c</fullName>
    <label>Item Text</label>
    <length>50</length>
    <type>Text</type>
</CustomField>