force-app/main/default/objects/EYI_Payment_Line_Item__c/fields/EYI_Milestone_No__c.field-meta.xml
<CustomField>
    <fullName>EYI_Milestone_No__c</fullName>
    <label>Milestone No.</label>
    <length>12</length>
    <type>Text</type>
</CustomField>