force-app/main/default/objects/EYI_Payment_Line_Item__c/fields/EYI_Number_of_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>EYI_Number_of_Line_Items__c</fullName>
    <label>Number of Line Items</label>
    <length>255</length>
    <type>Text</type>
</CustomField>