force-app/main/default/objects/EYI_Payment_Line_Item__c/fields/EYI_Outstanding_Amount__c.field-meta.xml
<CustomField>
    <fullName>EYI_Outstanding_Amount__c</fullName>
    <formula>IF(NOT(ISBLANK( EYI_Previously_Adjustment_Amount__c )),EYI_Principal_Tax_Amount__c - (EYI_Adjustment_Amount__c + EYI_Previously_Adjustment_Amount__c), EYI_Principal_Tax_Amount__c - EYI_Adjustment_Amount__c     
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>