force-app/main/default/objects/EYI_Payment_Line_Item__c/fields/EYI_Payment_Receipt__c.field-meta.xml
<CustomField>
    <fullName>EYI_Payment_Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to payment receipt</description>
    <label>Payment Receipt</label>
    <referenceTo>EYI_Payment_Receipt__c</referenceTo>
    <relationshipLabel>Payment Line Items</relationshipLabel>
    <relationshipName>Payment_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>