force-app/main/default/objects/EYI_Payment_Line_Item__c/fields/EYI_Posting_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Posting_Date__c</fullName>
    <label>Posting Date</label>
    <type>Date</type>
</CustomField>