force-app/main/default/objects/EYI_Payment_Line_Item__c/fields/EYI_Previously_Adjustment_Amount__c.field-meta.xml
<CustomField>
    <fullName>EYI_Previously_Adjustment_Amount__c</fullName>
    <label>Previously Adjustment Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>