force-app/main/default/objects/EYI_Payment_Line_Item__c/fields/EYI_Principal_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>EYI_Principal_Tax_Amount__c</fullName>
    <description>Princinpal or tax amount associated with the demand</description>
    <label>Billed Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>