force-app/main/default/objects/EYI_Payment_Line_Item__c/fields/EYI_Reference_Doc_No__c.field-meta.xml
<CustomField>
    <fullName>EYI_Reference_Doc_No__c</fullName>
    <label>Reference Doc No.</label>
    <length>16</length>
    <type>Text</type>
</CustomField>