force-app/main/default/objects/EYI_Payment_Line_Item__c/fields/EYI_SAP_External_Id__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_External_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>External Id combination for SAP integration</description>
    <externalId>true</externalId>
    <label>SAP External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>