force-app/main/default/objects/EYI_Payment_Line_Item__c/fields/EYI_SAP_Ref_Doc_No__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Ref_Doc_No__c</fullName>
    <label>SAP Ref Doc No</label>
    <length>15</length>
    <type>Text</type>
</CustomField>