force-app/main/default/objects/EYI_Payment_Line_Item__c/fields/EYI_SH_Indicators__c.field-meta.xml
<CustomField>
    <fullName>EYI_SH_Indicators__c</fullName>
    <label>SH Indicators</label>
    <length>2</length>
    <type>Text</type>
</CustomField>