force-app/main/default/objects/EYI_Payment_Line_Item__c/fields/EYI_Special_G_L_Indicator__c.field-meta.xml
<CustomField>
    <fullName>EYI_Special_G_L_Indicator__c</fullName>
    <label>Special G/L Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>