force-app/main/default/objects/EYI_Payment_Line_Item__c/fields/EYI_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>EYI_Total_Amount__c</fullName>
    <description>Total amount to be adjusted against the demand</description>
    <label>Total Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>