force-app/main/default/objects/EYI_Payment_Line_Item__c/fields/EYI_UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>EYI_UniqueKey__c</fullName>
    <formula>If( ISPICKVAL(EYI_Payment_Receipt__r.EYI_Transaction_Type__c, &apos;Demand&apos;), EYI_FL_Document_Number__c+&apos;-&apos;+Text(EYI_Fiscal_Year__c)+&apos;-&apos;+EYI_Number_of_Line_Items__c,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UniqueKey</label>
    <type>Text</type>
</CustomField>