force-app/main/default/objects/EYI_Payment_Line_Item__c/fields/EYI_Unit_Code_SAP__c.field-meta.xml
<CustomField>
    <fullName>EYI_Unit_Code_SAP__c</fullName>
    <label>Unit Code ( SAP)</label>
    <length>12</length>
    <type>Text</type>
</CustomField>